--- a/2DPuzzleBoom/Assembly-CSharp.csproj
+++ b/2DPuzzleBoom/Assembly-CSharp.csproj
@@ -45,10 +45,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\ColTes.cs" />
+     <Compile Include="Assets\LineLaser.cs" />
+     <Compile Include="Assets\RespawnPlayer.cs" />
+     <Compile Include="Assets\Scripts\Colliders\ColTes.cs" />
+     <Compile Include="Assets\Scripts\Colliders\LasCol.cs" />
+     <Compile Include="Assets\Scripts\Colliders\PlayerCol.cs" />
      <Compile Include="Assets\Scripts\Controllers\mpn_Controller.cs" />
      <Compile Include="Assets\Scripts\LevelTrigger.cs" />
      <Compile Include="Assets\Scripts\Levels\mpn_testLevel.cs" />
+     <Compile Include="Assets\Scripts\Spawner\LaserSpawner.cs" />
+     <Compile Include="Assets\Scripts\Spawner\PlayerSpawner.cs" />
      <Compile Include="Assets\Scripts\Spawner\mpn_projectileSpawner.cs" />
      <Compile Include="Assets\Scripts\Spawner\mpn_spawner.cs" />
      <Compile Include="Assets\Scripts\efa_MainMenu.cs" />
