--- a/2DPuzzleBoom/Assembly-CSharp.csproj
+++ b/2DPuzzleBoom/Assembly-CSharp.csproj
@@ -38,10 +38,10 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
-      <HintPath>G:/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+      <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>G:/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+      <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\Colliders\mpn_LasCol_LineRend.cs" />
      <Compile Include="Assets\Scripts\Controllers\mpn_Controller.cs" />
      <Compile Include="Assets\Scripts\LevelTrigger.cs" />
+     <Compile Include="Assets\Scripts\Levels\LevelOnePPlate.cs" />
      <Compile Include="Assets\Scripts\Levels\mpn_testLevel.cs" />
      <Compile Include="Assets\Scripts\Spawner\LaserSpawner.cs" />
      <Compile Include="Assets\Scripts\Spawner\PlayerSpawner.cs" />
@@ -64,10 +65,10 @@
      <Compile Include="Assets\Scripts\Spawner\mpn_spawner.cs" />
      <Compile Include="Assets\Scripts\efa_MainMenu.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>G:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
- <HintPath>G:/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
