--- a/2DPuzzleBoom/Assembly-CSharp.csproj
+++ b/2DPuzzleBoom/Assembly-CSharp.csproj
@@ -46,7 +46,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\LineLaser.cs" />
+     <Compile Include="Assets\Scripts\Action\LaserShotCol.cs" />
      <Compile Include="Assets\Scripts\Action\LightBulbCol.cs" />
+     <Compile Include="Assets\Scripts\Action\SpinningBlade.cs" />
      <Compile Include="Assets\Scripts\Action\eaf_greenBoxBehaviour.cs" />
      <Compile Include="Assets\Scripts\Action\exitTrigger.cs" />
      <Compile Include="Assets\Scripts\Action\mpn_DrawLas.cs" />
